--- a/project.html
+++ b/project.html
@@ -403,7 +403,7 @@
             <a href="#">Storage</a>
             <a href="#">Air Pods</a>
           </div>
-        </div>
+        </div></p>
       </div>
       <div >
         <img
