--- a/pract.html
+++ b/pract.html
@@ -66,93 +66,48 @@
         text-decoration: none;
         display: block;
       }
-      .dropdown-content a:hover {background-color: #F0F5FF;}
-      .dropdown:hover .dropdown-content {display: block;}
-      .dropdown:hover .dropbtn {background-color:white;color:#2874F0}
-      .dropbtn{
-        background-color: #2874F0;
-        color:white;
-        padding:5px 10px;
-        border:none;
+      .dropdown-content a:hover {
+        background-color: #f0f5ff;
+      }
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+      .dropdown:hover .dropbtn {
+        background-color: white;
+        color: #2874f0;
+      }
+      .dropbtn {
+        background-color: #2874f0;
+        color: white;
+        padding: 5px 10px;
+        border: none;
         font-size: 15px;
       }
       .dropbt {
         background-color: white;
-        border:none;
+        border: none;
       }
       .dropbt:hover {
-        color:blue;
+        color: blue;
       }
       .dropb {
-        border:none;
-        background-color: #2874F0;
-        color:white;
-        
+        border: none;
+        background-color: #2874f0;
+        color: white;
+
         text-align: center;
       }
-      .dropb:hover{
-        color:blue;
+      .dropb:hover {
+        color: blue;
         background-color: white;
       }
       .signin:hover {
-        color:#2874F0;
+        color: #2874f0;
       }
     </style>
   </head>
   <body>
-    <div class="navbar">
-      <div>
-        <ul type="none">
-        <li style="font-family: Arial, Helvetica, sans-serif;font-size: 15px;color:white"><h3><b>Flipkart</b></h3></li>
-          <div style="display: flex;">
-          <li style="font-style: italic; color: rgb(219, 205, 217)">
-            <b>Explore</b>
-            <span style="color: rgb(232, 232, 75)"><b>Plus</b></span>
-            <img
-            width="10"
-            height="10"
-            src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/plus_aef861.png"
-          ></img>
-        </ul>
-      </div>
-      <div class="real">
-        <input  type="search" title="Search for products, brands and more" name="q" autocomplete="off" placeholder="Search for products, brands and more" value="" class="type"></li>
-        <div class="search">
-        <p><i class="fa-solid fa-magnifying-glass" style="color: #1c64d8;"></i></p>
-      </div>
-      </div>
-      <div>
-        <div class="dropdown" >
-          <button class="dropbtn"><a href="http://127.0.0.1:5500/login.html" class="signin" style="text-align: center;text-decoration-line: none;color:white;font-size: 15px;"><b >Sign In<i class="fa-solid fa-angle-down"></i></b></a></button>
-          <div class="dropdown-content">
-            <a href="#">My Profile</a>
-            <a href="#">Flipkart Plus Zone</a>
-            <a href="#">Orders</a>
-            <a href="#">Wishlist</a>
-            <a href="#">Rewards</a>
-            <a href="#">Giftcards</a>
-         </div>
-        </div>
-      </div>
-      <div>
-         <p class="hii"><b>Become a seller</b></p>
-       </div>
-      <div>
-        <div class="dropdown">
-          <button class="dropb" style="font-size: 10px; text-align: center; margin-top: 15px;"><b>More <i class="fa-solid fa-angle-down"></i></b></button>
-          <div class="dropdown-content">
-            <a href="#">Notification Preference</a>
-            <a href="#">24*7 Customer Care</a>
-            <a href="#">Advertise</a>
-            <a href="#">Download</a>
-          </div>
-        </div>
-      </div>
-      <div>
-        <p style="font-size: larger;  color: white;text-align: center; margin-top: 13px;"><a class="dropbs"href="http://127.0.0.1:5500/cart.html" style="text-decoration-line: none;text-align: center;color: #fff;"><b><i class="fa-solid fa-cart-shopping" style="color: #e5dcdc;"></i> Cart</b></a></p>
-      
-      </div>
-    </div>
+    <div class="navbar"></div>
 
     <div class="header"></div>
 
